2008-06-17  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	Your attention please: #xmlnselement was renamed to #xmlel!

	I repeat: #xmlnselement was renamed to #xmlel!

	You may now resume your daily activities. Thanks you.

2008-06-16  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/core/exmpp_xml.erl, testsuite/check_xml_converters.erl: Preserve
	attributes order when making the text version.

	* testsuite/Makefile.am: Simplify this Makefile: all shell scripts are
	'built' the same way.

	* testsuite/test.sh: Specify the bar graph column width. It doesn't
	shrink to fit the larger bar anymore.

	* include/exmpp.hrl, src/core/exmpp_stream.erl,
	src/core/exmpp_stanza.erl, src/core/exmpp_iq.erl,
	src/server/exmpp_server_compression.erl,
	src/server/exmpp_server_tls.erl, src/server/exmpp_server_sasl.erl,
	src/server/exmpp_server_session.erl,
	src/server/exmpp_server_legacy_auth.erl,
	src/server/exmpp_server_binding.erl,
	src/client/exmpp_client_binding.erl,
	src/client/exmpp_client_roster.erl,
	src/client/exmpp_client_pubsub.erl,
	src/client/exmpp_client_compression.erl,
	src/client/exmpp_client_tls.erl, src/client/exmpp_client_sasl.erl,
	src/client/exmpp_client_session.erl,
	src/client/exmpp_client_register.erl,
	src/client/exmpp_client_legacy_auth.erl: Change the default value for
	children in #xmlnselement &nd #xmlelement to the empty list. This is a
	more sensible value that will spare systematic initialization.

	* include/exmpp.hrl, src/core/exmpp_stream.erl,
	src/core/exmpp_xmlstream.erl, src/core/exmpp_xml.erl,
	src/network/exmpp_session.erl, c_src/exmpp_expat.c,
	testsuite/check_xml_converters.erl, testsuite/check_xmlstream.erl,
	testsuite/check_xml_parser.erl, testsuite/check_stream.erl: Merge
	#xmlnsendelement and #xmlendelement in #xmlendtag. This is done
	because this notion didn't exist in ejabberd and the name was wrong;
	this record doesn't represent an element. When namespace support is